[package]
name = "turbin3_pre_req"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.1"
bs58 = "0.5.1"
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }
idlgen = { git = "https://github.com/deanmlittle/idlgen.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "2.0.3"
solana-program = "2.0.3"
solana-sdk = "2.0.3"
clap = "4.5.11"
rocksdb = "0.22.0"

[dev-dependencies]
assert_cmd = "2.0.15"
predicates = "3.1.2"
tempdir = "0.3.7"
